[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/menus/upgrades/item_box_ui.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/menus/shop/item_description.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/menus/global/my_menu_button.gd" type="Script" id=4]
[ext_resource path="res://resources/fonts/actual/base/font_big_title.tres" type="DynamicFont" id=5]
[ext_resource path="res://ui/menus/shop/stats_container.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/menus/global/focus_manager.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/menus/shop/stat_popup.tscn" type="PackedScene" id=8]

[node name="ItemBoxUI" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="AttenuateBackground" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.686275 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1920.0
margin_bottom = 1346.0
custom_constants/separation = 100
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 406.0
margin_right = 1030.0
margin_bottom = 1346.0
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 504.0
margin_right = 624.0
margin_bottom = 577.0
custom_fonts/font = ExtResource( 5 )
text = "ITEM_FOUND"
align = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_left = 131.0
margin_top = 609.0
margin_right = 492.0
margin_bottom = 745.0
size_flags_horizontal = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 356.0
margin_bottom = 131.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="ItemDescription" parent="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = 15.0
margin_right = 336.0
margin_bottom = 111.0
custom_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 777.0
margin_right = 624.0
margin_bottom = 842.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TakeButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 261.0
margin_bottom = 65.0
text = "MENU_TAKE"
script = ExtResource( 4 )

[node name="DiscardButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 293.0
margin_right = 624.0
margin_bottom = 65.0
text = "MENU_RECYCLE"
script = ExtResource( 4 )

[node name="StatsContainer" parent="MarginContainer/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 1130.0
margin_top = 0.0
margin_right = 1514.0
margin_bottom = 1346.0
rect_min_size = Vector2( 384, 740 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="FocusManager" parent="." instance=ExtResource( 7 )]

[node name="StatPopup" parent="." instance=ExtResource( 8 )]
visible = false
margin_left = 1643.0
margin_right = 1643.0

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/TakeButton" to="." method="_on_TakeButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/DiscardButton" to="." method="_on_DiscardButton_pressed"]
